<resources>
    <string name="hello">Hello World, ActivityStartup!</string>
    <string name="app_name">Comic</string>
    <string name="app_en_name">bukaManga</string>
    <string name="servermain">http://192.168.1.105/test/req.php</string>
    <string name="btnOk">确定</string>
    <string name="btnCancel">取消</string>
    <string name="TipsTitle">提示</string>
    <string name="btnYes">是</string>
    <string name="btnNo">否</string>
    <string name="btnRetry">重试</string>
    <string name="itemMore">显示更多</string>
    <string name="itemMoreErr">获取网络内容失败，点此重试。</string>
    <string name="itemLoading">正在获取...</string>
    <string name="listLoadErrText">获取网络内容失败，请重试。</string>
    <string name="detailLoadErrText">获取网络内容失败，请重试。</string>
    <string name="chapterLoadErrText">获取网络内容失败，请重试。</string>
    <string name="listReBtnText">重新获取</string>
    <string name="tabHome">书架</string>
    <string name="tabRecommend">推荐</string>
    <string name="tabClassify">分类</string>
    <string name="tabSearch">搜索</string>
    <string name="tabMore">更多</string>
    <string name="topBtnFavorite">　我的收藏　</string>
    <string name="topBtnHistory">　最近阅读　</string>
    <string name="FavEmptyTips">您尚未收藏任何漫画哦！</string>
    <string name="HisEmptyTips">没有阅读记录哦！</string>
    <string name="searchTips">请输入漫画名或作者名</string>
    <string name="historyTitle">我的书架</string>
    <string name="topBtnBookmark">漫画书签</string>
    <string name="bookmarkEmpty">此漫画没有保存的书签</string>
    <string name="topBtnAtoZ">　A - Z　</string>
    <string name="topBtnType">　漫画类型　</string>
    <string name="topBtnTopic">　精彩推荐　</string>
    <string name="topBtnHot">　热门连载　</string>
    <string name="topBtnNew">　最近更新　</string>
    <string name="sItemRateText">评分</string>
    <string name="chooseChapter">定位到</string>
    <string name="detailBtnEnterText">查看目录</string>
    <string name="detailTitle">名称：%s</string>
    <string name="detailAuthorText">作者：%s</string>
    <string name="detailUpdateText">更新：%s</string>
    <string name="listChapterNull">很抱歉哦，本漫画暂时没有被收录.先看看别的吧，不如</string>
    <string name="listChapterNullMsgBtn">哦</string>
    <string name="hua">%d话</string>
    <string name="juan">%d卷</string>
    <string name="menuhua">话</string>
    <string name="menujuan">卷</string>
    <string name="danBen">番外篇</string>
    <string name="huaJuabTips">说明：[卷]为漫画单行本，[话]为漫画杂志连载，一卷大约包含6-10话，之间并没有缺失章节。</string>
    <string name="chapterBtnDlMar">下载管理</string>
    <string name="chapterDownLoading">正在下载</string>
    <string name="chapterDownLoadPaused">已经暂停</string>
    <string name="chapterDownLoadError">下载错误</string>
    <string name="chapterDownLoadWaiting">等待下载</string>
    <string name="chapterRead">观看</string>
    <string name="chapterReadOnLine">在线观看</string>
    <string name="chapterComplete">已经下载</string>
    <string name="chapterDownLoad">点击下载</string>
    <string name="chapterMenuTitle">定位到</string>
    <string name="chapterSort">排序</string>
    <string name="detailDescBtnOp">展开</string>
    <string name="detailDescBtnCl">收起</string>
    <string name="detailRate">评分：</string>
    <string name="detailDlTitle">请选择需要下载的章节</string>
    <string name="detailDlNoSel">共选择0项</string>
    <string name="detailFav">添加收藏</string>
    <string name="detailIsFav">已收藏</string>
    <string name="detailFavTips">已添加到收藏</string>
    <string name="detailFavErrTips">添收藏失败</string>
    <string name="detailRead">开始阅读</string>
    <string name="historyReadGoon">继续阅读</string>
    <string name="detailDlSel">下载所选</string>
    <string name="detailDlAll">全选</string>
    <string name="detailDlCancelSel">取消</string>
    <string name="detailDlBtn">下载</string>
    <string name="detailDlmenu">下载漫画</string>
    <string name="detailDlAllTips">您选择的漫画总大小为 %s ,确定要继续下载吗？</string>
    <string name="detailDlAllTips2">您选择的漫画共 %s ！！！\n\n可能需要较长时间下载，并会占用大量的SD卡空间，建议您减少下载的章节数量，或在线观看。\n\n您确定要下载吗？</string>
    <string name="historyRead">看到%s　</string>
    <string name="historyUpDate">更新到%s</string>
    <string name="historyReadNow">立即观看</string>
    <string name="historyChapter">查看目录</string>
    <string name="historyDownLoad">下载管理</string>
    <string name="historyMenuCancel">取消</string>
    <string name="historyDelete">删除漫画</string>
    <string name="historyDeleteMsg">确定要删除 %s 吗？\n注意：删除记录的同时会自动删除该漫画已下载的文件。</string>
    <string name="DelPreparing">正在准备删除漫画...</string>
    <string name="DeletingFiles">正在删除漫画文件及缓存</string>
    <string name="DeletingRs">正在删除历史记录</string>
    <string name="historyDelErr">删除漫画完成,但 %s 目录下有残留文件,请手动删除</string>
    <string name="FavRemove">删除记录</string>
    <string name="FavDetail">漫画详情</string>
    <string name="FavClear">全部清空</string>
    <string name="dlMarDelete">删除漫画</string>
    <string name="dlMarDelBtn">删除</string>
    <string name="dlMarDeleteOk">完成</string>
    <string name="dlMarDownloading">下载中</string>
    <string name="dlMarPaused">已暂停</string>
    <string name="dlMarPausing">正在暂停</string>
    <string name="dlMarWaiting">等待下载</string>
    <string name="dlMarError">下载错误</string>
    <string name="dlMarComplete">已完成</string>
    <string name="dlMarPauseAll">全部暂停</string>
    <string name="dlMarResumeAll">全部开始</string>
    <string name="dlMarAllTitle">正在下载中的任务</string>
    <string name="dlMarNoTask">没有下载记录哦，您可以在目录页面中进行下载。</string>
    <string name="dlMarAllNoTask">当前没有正进行的下载任务。</string>
    <string name="dlMarNoTaskChapter">进入目录页面</string>
    <string name="dlMarChapter">目录</string>
    <string name="searchGetTagsErr">获取网络内容失败，请重试。</string>
    <string name="searchHot">热门搜索</string>
    <string name="searchNoResultTitle">抱歉，暂未找到相关的漫画</string>
    <string name="searchNoResultTips">我们将尽快收录相关的漫画,你可以先看看：</string>
    <string name="searchNoResultTipsContent">● 我们会尽快收录相关漫画，并第一时间通知您。\n● 看看输入的文字是否有误。\n● 更换其它关键词进行搜索。</string>
    <string name="searchMsgBtnText">重试</string>
    <string name="searchMsgBtnNoResult">更换关键词</string>
    <string name="picloading">正在载入，请稍候...</string>
    <string name="FirstLoading1">读盘什么的最讨厌了</string>
    <string name="FirstLoading2">好像傲娇了噢，点右上刷新一下</string>
    <string name="readMenuFav">添加收藏</string>
    <string name="readMenuIsFav">已经收藏</string>
    <string name="readMenuFullMode">原图模式</string>
    <string name="readMenuClipMode">分图模式</string>
    <string name="readMenuClipInfoShow">显示页码</string>
    <string name="readMenuClipInfoHide">隐藏页码</string>
    <string name="readMenuBrightness">亮度调节</string>
    <string name="readMenuExit">退出阅读</string>
    <string name="brightnessTips">您的手机开启了亮度自动调节，手动调整可能会没效果。</string>
    <string name="readMenuPortrait">竖屏模式</string>
    <string name="readMenuLandscapel">横屏模式</string>
    <string name="readMenuRegion">操作提示</string>
    <string name="regionPrev">点击此区域\n转到上一页</string>
    <string name="regionMenu">点击此区域\n弹出菜单</string>
    <string name="regionNext">点击此区域\n转到下一页</string>
    <string name="regionPrev2">上一页</string>
    <string name="regionMenu2">菜单</string>
    <string name="regionNext2">下一页</string>
    <string name="slideRegionTips">当前为滑图模式：\n点击屏幕中间弹出菜单;\n手指在屏幕上下滑动翻页</string>
    <string name="readMenuAddBookMark">添加书签</string>
    <string name="readMenuRemoveBookMark">移除书签</string>
    <string name="readMenuBookMark">我的书签</string>
    <string name="readMenuList">目录列表</string>
    <string name="picReportError">感谢您的反馈，我们会尽快处理。</string>
    <string name="addBookMarkTips">添加书签成功！</string>
    <string name="feedbacktipmsg">请填写您的建议或遇到的问题，非常感谢！</string>
    <string name="applytipmsg">请填写您想看的漫画</string>
    <string name="feedbacktipuser">您的QQ或E-mail (选填)</string>
    <string name="feedbacktipbtn">提交</string>
    <string name="feedbacktipup">正在提交...</string>
    <string name="feedbacktipok">提交成功，非常感谢您对布卡的支持！</string>
    <string name="applytipok">提交成功，我们会尽快更新您提交的漫画，多谢您的支持！</string>
    <string name="picErrorBtnRetry">重试</string>
    <string name="picErrorBtnJump">跳过</string>
    <string name="networkTitle">流量提醒</string>
    <string name="networkBtnYes">继续</string>
    <string name="networkBtnNo">算了</string>
    <string name="networkconfim1">您正在使用2G网络。\n继续将会产生高昂的流量费。\n建议您通过Wifi下载后观看。</string>
    <string name="networkconfim2">需要访问网络才能继续观看。\n您确定要继续吗？</string>
    <string name="networkconfim3">您正在使用3G网络，可能会产生一些流量费用。\n您确定要继续吗？</string>
    <string name="networkdl2g">您正在使用2G网络。\n继续将会产生高昂的流量费。\n建议您通过Wifi下载后观看。</string>
    <string name="networkdl3g">您正在使用3G网络。\n继续将会产生流量费。</string>
    <string name="networkdlother">您正在使用未知网络。\n继续会产生流量费。</string>
    <string name="downloadNoSD">检测不到SD卡或SD卡不可写，无法下载跟观看漫画。</string>
    <string name="InsufficientSpace">您的SD卡空间不足，无法下载跟观看漫画。</string>
    <string name="networkdisconn">当前没有网络，无法继续观看，请检查网络设置。</string>
    <string name="downerrnopic">本地已没有图片可观看。</string>
    <string name="downerrnonet">本地图片缺失。\n您可以跳至下张继续观看。</string>
    <string name="downerrnoallownet">本地图片缺失。\n需要联网才能观看本张图片。\n您可以跳至下张继续观看。</string>
    <string name="btnSkippic">跳至下张图片</string>
    <string name="btnConnect">联网观看</string>
    <string name="networkerr">网络错误，请检查网络设置。</string>
    <string name="lastchaptertip">您已经看完了！</string>
    <string name="RcTitle">您已经看完 %s 了！</string>
    <string name="RcUdTips">漫画有更新时提醒我</string>
    <string name="RcUdTipsBtn">开启提醒</string>
    <string name="RcUdOpen">漫画更新提醒已开启!\n如需取消，请在[设置]页面里设置。</string>
    <string name="RcReco">您可能还喜欢</string>
    <string name="RcBack">返回阅读</string>
    <string name="RcExit">退出阅读</string>
    <string name="picerrtips">加载图片失败，请重试</string>
    <string name="notifyDownloadTitle">布卡下载任务</string>
    <string name="notifyDownloading">布卡漫画正在下载...</string>
    <string name="notifyPaused">下载已暂停</string>
    <string name="notifyCompleted">漫画已下载完成，快去看吧!</string>
    <string name="notifyNoNetwork">布卡网络连接出错，已暂停下载。</string>
    <string name="notifyNetworkLevel">网络环境改变，已暂停下载。</string>
    <string name="notifyDownErr">部分下载任务失败，请检查网络并重试。</string>
    <string name="notifyUpdateTitle">有漫画更新了！</string>
    <string name="notifyUpdateManga2">%s 更新啦，快去看吧！</string>
    <string name="notifyUpdateCount">有 %d 本漫画更新啦，快去看吧！</string>
    <string name="moreSetting">软件设置</string>
    <string name="moreDownloadMar">下载管理</string>
    <string name="moreCheck">扫描漫画</string>
    <string name="moreAbout">关于布卡</string>
    <string name="moreFeedback">意见反馈</string>
    <string name="moreRequest">寻求漫画</string>
    <string name="moreContact">联系我们</string>
    <string name="moreUpdate">软件升级</string>
    <string name="cdTips">您的SD卡中可能存在已经下载的漫画，是否马上扫描导入？</string>
    <string name="cdNoDir">下载目录不存在</string>
    <string name="cdTitle">正在扫描...</string>
    <string name="cding">发现 %d 个已下载的漫画章节</string>
    <string name="cdFinishTitle">扫描完成</string>
    <string name="cdNoFound">没有找到已下载的漫画。</string>
    <string name="cdError">扫描时遇到问题，无法继续。</string>
    <string name="cdNoName">检测到已下载的漫画，但无法联网获取漫画名称，联网后将自动更新漫画名称。</string>
    <string name="cdUnKonw">未知漫画</string>
    <string name="aboutTitle">关于</string>
    <string name="aboutInfo">布卡漫画 %s\n\n布卡官网：www.ibuka.cn\nQQ反馈群：209160325\n交流论坛：bbs.ibuka.cn</string>
    <string name="moreTitle">更多</string>
    <string name="settingNetwork">网络设置</string>
    <string name="mobNetworkTitle">使用移动网络</string>
    <string name="mobNetworkTips">没有无线网络时会自动使用移动网络</string>
    <string name="settingRead">阅读设置</string>
    <string name="gesturesTitle">使用滑动手势翻页</string>
    <string name="gesturesSummary">横屏时上/下翻页，竖屏时左/右翻页</string>
    <string name="volumeKeyTitle">使用音量键翻页</string>
    <string name="volumeKeySummary">向上翻到上一页，向下翻到下一页</string>
    <string name="settingGeneral">常规设置</string>
    <string name="settingPath">路径设置</string>
    <string name="settingPathTitle">修改下载目录</string>
    <string name="updateNotify">漫画更新提醒</string>
    <string name="updateSummary">书架里的漫画有更新时，在通知栏提醒</string>
    <string name="dirParent">返回上级</string>
    <string name="dirOk">　确定　</string>
    <string name="DlDirTips">请选择下载储存目录:</string>
    <string name="setDlDirErr">路径不存在</string>
    <string name="createDirErr">创建目录失败</string>
    <string name="network_error">网络异常，点击重试</string>
    <string name="retry">重试</string>
    <string name="no_matches_found">没有找到匹配记录</string>
</resources>