<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/viewdownloadstate" />

    <include layout="@layout/viewsearchresult" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46.7dp"
        android:background="@drawable/search_title_bar_bg2"
        android:orientation="horizontal"
        android:padding="5dip" >

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_search_bg"
            android:clickable="true"
            android:padding="1.0dp" />

        <AutoCompleteTextView
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:layout_toLeftOf="@id/search"
            android:background="@drawable/bg_edittext"
            android:singleLine="true" />
    </RelativeLayout>

    <com.pekall.market.util.KeywordsFlow
        android:id="@+id/keywordsflow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/network_error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                style="@style/software_list_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_error" />

            <Button
                android:id="@+id/retry"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/retry" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_matches_found"
            style="@style/software_list_item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_matches_found"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/divider_bg"
        android:visibility="gone" >
    </ListView>

</LinearLayout>